# BaoLianDeng

./: .gitignore  CLAUDE.md  Makefile  README.md
.github/workflows/: ci.yml
BaoLianDeng/: BaoLianDeng.entitlements  BaoLianDengApp.swift  Info.plist  InfoPlist.xcstrings  Localizable.xcstrings
BaoLianDeng.xcodeproj/: project.pbxproj
BaoLianDeng.xcodeproj/xcshareddata/xcschemes/: BaoLianDeng.xcscheme
BaoLianDeng/Models/: MihomoAPI.swift  ProxiesResult.swift  ProxyGroupsViewModel.swift  TrafficStore.swift
BaoLianDeng/Views/: AboutView.swift  ConfigEditorView.swift  ConfigListViews.swift  ConfigStyleHelpers.swift  ConfigSubViews.swift  ConnectionsView.swift  DiagnosticsView.swift  HomeView.swift  MainContentView.swift  NodeRow.swift  PerAppProxySection.swift  ProxyGroupsSection.swift  RulesView.swift  SettingsView.swift  SidebarView.swift  SubscriptionModels.swift  TrafficView.swift  TunnelLogView.swift  VPNToolbarContent.swift  YAMLEditor.swift  YAMLHighlighter.swift
BaoLianDengTests/: BypassGroupDetectionTests.swift  ConfigParserTests.swift  MihomoAPITests.swift  MihomoCoreIntegrationTests.swift  PerAppProxySettingsTests.swift  ProxyEngineIntegrationTests.swift  ProxyGroupsViewModelTests.swift
BaoLianDengTests/Utilities/: ProxyEngineHelper.swift  TestConfigs.swift
Go/mihomo-bridge/: bridge.go  diagnostics.go  error.go  go.mod  go.sum  main.go
Go/mihomo-bridge/objc/: MihomoCore.h  MihomoCore.m  module.modulemap
PacketTunnel/: PacketTunnelProvider.swift
PacketTunnelMac/: Info.plist  PacketTunnelMac.entitlements
Rust/meow-ffi/: Cargo.toml
Rust/meow-ffi/objc/: MihomoCore.h
Rust/meow-ffi/src/: diagnostics.rs  engine.rs  geodata.rs  lib.rs  logging.rs
Rust/mihomo-ffi/: Cargo.toml  build.rs
Rust/mihomo-ffi/lwip/custom/: lwip_helpers.c  lwipopts.h
Rust/mihomo-ffi/lwip/custom/arch/: cc.h  sys_arch.h
Rust/mihomo-ffi/lwip/src/core/: tcp_in.c
Rust/mihomo-ffi/lwip/src/core/ipv4/: ip4.c
Rust/mihomo-ffi/objc/: MihomoCore.h  MihomoCore.m  module.modulemap
Rust/mihomo-ffi/src/: diagnostics.rs  dns_table.rs  doh_client.rs  lib.rs  logging.rs  lwip_ffi.rs  tun2socks.rs  tun_fd.rs
Shared/: AppLogger.swift  ConfigManager.swift  Constants.swift  PerAppProxySettings.swift  VPNManager.swift
TransparentProxy/: SOCKS5Client.swift  TransparentProxyProvider.swift  UDPNATRelay.swift
TransparentProxyAppex/: Info.plist
TransparentProxyMac/: Info.plist
docs/: index.html  tun2socks-design.md
scripts/: build-release-dmg.sh  build-release-pkg.sh  dev-deploy.sh
tests/e2e/: run-e2e.sh  run-stability-test.sh  run-stress-test.sh  vm-setup.sh  vm-stress-test.sh  vm-test.sh
tests/e2e/config/: stress-test-config.yaml  test-config.yaml
tests/e2e/lib/: vm-helpers.sh
