[package]
name = "mihomo-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
mihomo-tunnel = { git = "https://github.com/madeye/mihomo-rust.git", tag = "v0.2.0" }
mihomo-config = { git = "https://github.com/madeye/mihomo-rust.git", tag = "v0.2.0" }
mihomo-dns = { git = "https://github.com/madeye/mihomo-rust.git", tag = "v0.2.0" }
mihomo-listener = { git = "https://github.com/madeye/mihomo-rust.git", tag = "v0.2.0" }
mihomo-api = { git = "https://github.com/madeye/mihomo-rust.git", tag = "v0.2.0" }
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_yaml = "0.9"
serde_json = "1"
anyhow = "1"
libc = "0.2"
nix = { version = "0.29", features = ["fs"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "socks"] }
serde = { version = "1", features = ["derive"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }

[build-dependencies]
cc = "1"
glob = "0.3"
